php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21815 Buffer loss with fpassthru on popen
Submitted: 2003-01-22 04:01 UTC Modified: 2003-02-12 19:26 UTC
From: stefan at fostam dot franken dot de Assigned: wez (profile)
Status: Closed Package: Filesystem function related
PHP Version: 4.3.0 OS: Linux 2.4
Private report: No CVE-ID: None
 [2003-01-22 04:01 UTC] stefan at fostam dot franken dot de
When calling fpassthru() on a file pointer opened with popen(), it fails if there has been already read from that pointer.

$fp = popen("/bin/ls /", "r");
if ($fp) {
  $line = fgets($fp, 1024);
  print $line;

  fpassthru($fp);
}


Results in the following error:
fpassthru(): 77 bytes of buffered data lost during conversion to FILE*!

The same script works fine with php 4.2.3. It also works fine if there hasn't been read from the file before (i.e. omitting the fgets() line in above example).

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-22 04:53 UTC] wez@php.net
I know what the problem is -> assigning to myself
 [2003-02-12 19:26 UTC] wez@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

Fix will be in PHP 4.3.1, due soon.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC