Fix for Bug #21815 (fpassthru ignored buffered data but then complained anyway)